[FIX] - Gallery text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -912,6 +912,7 @@ body {
 
   .gallery .slide-text {
     padding: 2.4vw 4.53vw;
+    background-color: white;
   }
 
   .gallery .img h3 {
